--- a/a3_task2_caroline_shepherd.Rmd
+++ b/a3_task2_caroline_shepherd.Rmd
@@ -62,8 +62,7 @@ Make sure to `View()` the resulting data frame (remember: run `View()` in the Co
 sw_split_name <- starwars %>% # Start with starwars data
   separate(name, # Separate based on name column
            into = c("name_1", "name_2"), # Into two columns: name_1 and name_2
-           sep = "-") # separate at the first dash
-
+           sep = "-") # Separate at the first dash
 ```
 
 #### 1B. Follow me
@@ -101,7 +100,8 @@ sw_skin_sep <- starwars %>% # Start with starwars data
            into = c("skin_1", "skin_2"), # Separate into two columns: skin_1 and skin_2
            sep = ",", # Separate at the first comma
            extra = "merge", # If additional spaces exist, merge all into the second column
-           remove = FALSE) # do not remove the original column
+           remove = FALSE) # Do not remove the original column
+
 ```
 
 ### 2. `tidyr::unite()`
@@ -140,7 +140,7 @@ mpg_model_class <- mpg %>% # Start with  mpg data
   unite(col = model_class, # Create a new column with the name 'model_class'
         c("model", "class"), # Combine the model and class columns
         sep = "-", # Separate at the first dash
-        remove = FALSE) # do not remove the original column
+        remove = FALSE) # Do not remove the original column
 
 ```
 
@@ -155,7 +155,7 @@ Run the code below to see how the `lubridate::ymd()` function (and variants) can
 ```{r}
 # Run the following lines of code, which contain dates in order of Year-Month-Day in different formats: 
 
-ymd(20201118) # Concert to date class
+ymd(20201118)
 
 ymd("2020-11-18")
 
@@ -170,6 +170,7 @@ In the code chunk below, use `ymd()` to convert a date that you choose in `YYYY-
 
 ```{r}
 # Your code here: 
+
 ymd(19970506) # Convert to date class
 
 ymd("1997/05/06") # Convert to date class
@@ -198,7 +199,6 @@ In the code chunk below, create a vector (using `c()`, as above) stored as `some
 
 ```{r}
 # Your code here: 
-
 some_dates <- c(05061997, 06062007, 01271997) # Create a new vector of dates without spaces
 
 some_dates_converted <- lubridate::mdy(some_dates) # Converts these dates, save as some_dates_converted
@@ -254,6 +254,7 @@ gasol_hookshots <- lakers %>%  # Start with lakers data
 
 hookshots_recorded <- gasol_hookshots %>% # Find total shots recorded
   count(month_new)
+
 ```
 
 ### 4. `dplyr::case_when()`
@@ -307,7 +308,6 @@ storms_danger <- storms %>% # Start with storms data
     status %in% c("hurricane") ~ "high", # Danger status is 'high' if storm type is 'hurricane'
     status %in% c("tropical storm") ~ "moderate", # Danger status is 'moderate' if storm type is 'tropical storm'
     status %in% c("tropical depression") ~ "moderate")) # Danger status is 'moderate' if storm type is 'tropical depression'
-
 ```
 
 ## 5. Practice version control w/git
